[package]
name = "bevy_ui_3d"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jebradbury39/bevy_ui_extended"
keywords = ["gamedev", "bevy", "ui", "3d"]
categories = ["game-development"]
description = "A UI plugin to enable 3d interactions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
smallvec = "1.11.1"
bevy_rapier3d = "0.23.0"

[[example]]
name = "3d_scene"
path = "examples/3d_scene.rs"